[risk=low][RW-10064] Use new Leo disks client in all cases (#8845)